acvm-repo/msgpack_tagged/tests/compile_fail/hashmap_on_wire.stderr
error[E0277]: the trait bound `HashMap<String, u32>: MsgpackTagged` is not satisfied
  --> tests/compile_fail/hashmap_on_wire.rs:12:23
   |
12 |     requires_tagged::<HashMap<String, u32>>();
   |                       ^^^^^^^^^^^^^^^^^^^^ the trait `MsgpackTagged` is not implemented for `HashMap<String, u32>`
   |
   = note: use `#[derive(MsgpackTagged)]` on the type, or `#[via(WireType)]` on a shadow-DTO public type that delegates to a wire companion
   = note: for container fields, use `BTreeMap` / `BTreeSet` — `HashMap` / `HashSet` are deliberately unsupported on the wire because their iteration order is non-deterministic
   = help: the following other types implement trait `MsgpackTagged`:
             ()
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
             (T0, T1, T2, T3, T4, T5)
             (T0, T1, T2, T3, T4, T5, T6)
             (T0, T1, T2, T3, T4, T5, T6, T7)
           and $N others
note: required by a bound in `requires_tagged`
  --> tests/compile_fail/hashmap_on_wire.rs:9:23
   |
9  | fn requires_tagged<T: MsgpackTagged>() {}
   |                       ^^^^^^^^^^^^^ required by this bound in `requires_tagged`
